apps/kavita/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kavita
  name: kavita
  namespace: kavita
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kavita
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kavita
    spec:
      containers:
      - image: kizaing/kavita:0.5.3
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /
            port: web
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: lanraragi
        ports:
        - containerPort: 5000
          name: web
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: web
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /manga
          name: manga
        - mountPath: /kavita/config
          name: config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: manga
        persistentVolumeClaim:
          claimName: manga
      - name: config
        persistentVolumeClaim:
          claimName: config
