apps/kavita/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: kavita
spec:
  ports:
  - name: web
    port: 5000
    protocol: TCP
    targetPort: web
  selector:
    app: kavita
  sessionAffinity: None
  type: ClusterIP
