apps/kavita/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kavita
  namespace: kavita
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    optix.io/dns: public
spec:
  rules:
  - host: kavita.hybridoptix.net
    http:
      paths:
      - backend:
          service:
            name: kavita
            port:
              number: 5080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - kavita.hybridoptix.net
